unpackaged/main/default/objects/Application_Contact_Role__c/Application_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>CR-{00}</displayFormat>
        <label>Role No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>