unpackaged/main/default/objects/Application_Contact_Role__c/fields/Assessment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Contact__c</fullName>
    <label>Assessment Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>