unpackaged/main/default/objects/Application_Contact_Role__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Contact__r.Id ,  Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>